05-Services/Ingress/TLS-Self-Signed/Examples/demo-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-web-deployment
  labels:
    app: tls-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-web
  template:
    metadata:
      labels:
        app: tls-web
    spec:
      containers:
      - name: tls-web
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tls-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: tls-content
        configMap:
          name: tls-content
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: tls-web
  ports:
  - port: 80
    targetPort: 80
