05-Services/Ingress/TLS-Self-Signed/Examples/ingress-tls-selfsigned.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-tls-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - secure.akashshankar.in
    secretName: akashshankar-in-tls
  rules:
  - host: secure.akashshankar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
